--- a/src/app/resp/components/course-details-modal/course-details-modal.component.scss
+++ b/src/app/resp/components/course-details-modal/course-details-modal.component.scss
@@ -1,34 +1,56 @@
+.course-details {
+  padding: 1em;
+  font-family: Arial, sans-serif;
+}
+
 .course-details .p-grid {
   margin: 0;
-  padding: 1em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #ddd;
 }
 
-.course-details .p-col-4 {
-  font-weight: bold;
-}
-
-.course-details .p-col-8 {
-  padding-left: 1em;
+.course-details .info-item {
   display: flex;
   align-items: center;
+  margin-bottom: 0.5em;
+}
+
+.course-details .info-icon {
+  margin-right: 0.5em;
+  color: #007ad9;
+}
+
+.course-details .info-label {
+  font-weight: bold;
+  margin-right: 0.5em;
+}
+
+.course-details .info-value {
+  flex-grow: 1;
 }
 
 .course-details .color-box {
+  width: 20px;
+  height: 20px;
   display: inline-block;
-  width: 1em;
-  height: 1em;
   border: 1px solid #ccc;
   margin-right: 0.5em;
 }
 
-.teachers-list {
+.course-details .info-value-list {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-.teachers-list li:not(:last-child)::after {
-  content: ",";
+.course-details .info-value-list li {
+  padding: 0.2em 0;
+}
+
+.p-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.5em;
 }
 
 .p-footer .p-button:not(:last-child) {
@@ -44,17 +66,49 @@
   background: var(--red-600);
 }
 
-.p-dialog .p-footer {
-  display: flex;
-  justify-content: flex-end;
+.p-tabView .p-tabPanel {
+  padding: 1em;
 }
 
-.classrooms-list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+.edit-course-form {
+  padding: 1em;
+  background-color: #f5f5f5;
+  border-radius: 5px;
 }
 
-.classrooms-list li:not(:last-child)::after {
-  content: ",";
+.form-group {
+  margin-bottom: 1em;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 0.5em;
+  font-weight: bold;
+}
+
+.input-field,
+p-multiSelect,
+p-dropdown {
+  width: 100%;
+  padding: 0.5em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-actions {
+  text-align: right;
+  margin-top: 1em;
+}
+
+.save-button {
+  padding: 0.5em 1em;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+}
+
+.save-button:hover {
+  background-color: #0056b3;
 }
