récupération des enseignant dans le modal de modification

--- a/src/app/resp/components/manage-courses/manage-courses.component.html
+++ b/src/app/resp/components/manage-courses/manage-courses.component.html
@@ -12,6 +12,7 @@
         ></p-dropdown>
 
         <p-dropdown
+          *ngIf="filteredPromotions && filteredPromotions.length > 0"
           [options]="filteredPromotions"
           [(ngModel)]="selectedPromotionId"
           (onChange)="onPromotionChange()"
