--- a/src/app/resp/components/course-details-modal/course-details-modal.component.html
+++ b/src/app/resp/components/course-details-modal/course-details-modal.component.html
@@ -153,13 +153,28 @@
         <label>Enseignants</label>
         <p-multiSelect
           formControlName="teachers"
-          optionLabel="name"
-        ></p-multiSelect>
+          [options]="teachers"
+          optionLabel="label"
+          display="chip"
+          appendTo="body"
+          value="id"
+          placeholder="Sélectionnez des enseignants"
+        >
+        </p-multiSelect>
       </div>
 
       <div class="form-group">
         <label>Salle de classe</label>
-        <p-dropdown formControlName="classroom" optionLabel="name"></p-dropdown>
+
+        <p-multiSelect
+          formControlName="classroom"
+          [options]="classrooms"
+          optionLabel="label"
+          display="chip"
+          appendTo="body"
+          placeholder="Sélectionnez une salle de classe"
+        >
+        </p-multiSelect>
       </div>
 
       <div class="form-actions">
