--- a/src/app/statistics/components/statistics-layout/statistics-layout.component.html
+++ b/src/app/statistics/components/statistics-layout/statistics-layout.component.html
@@ -23,10 +23,14 @@
 <h2 class="p-text-center">Statistiques avancées :</h2>
 
 <div class="card">
-    <p-tabMenu [model]="items" [activeItem]="activeItem"></p-tabMenu>
+    <p-tabMenu [model]="items" [activeItem]="activeItem" (activeItemChange)="onActiveItemChange($event)"></p-tabMenu>
 
     <div *ngIf="activeItem && activeItem.label === 'Par Mois'">
-        <app-hours-by-month [year]="selectedYear" [month]="selectedMonth"></app-hours-by-month>
+        <app-hours-by-month [year]="selectedYear" [month]="selectedMonth" ></app-hours-by-month>
+    </div>
+
+    <div *ngIf="activeItem && activeItem.label === 'Par Ressources'">
+        <app-hours-by-resource [resource]="selectedYear"></app-hours-by-resource>
     </div>
 
 
