--- a/src/app/resp/components/course-details-modal/course-details-modal.component.html
+++ b/src/app/resp/components/course-details-modal/course-details-modal.component.html
@@ -5,14 +5,7 @@
   [style]="{ width: '50vw' }"
   (onHide)="onClose()"
 >
-  <div *ngIf="isLoading" class="skeleton-loading">
-    <!-- Contenu du skeleton ici -->
-    <div class="loading-text">Chargement du cours...</div>
-    <p-skeleton width="100%" height="1rem"></p-skeleton>
-    <p-skeleton width="80%" height="1rem" styleClass="my-4"></p-skeleton>
-    <p-skeleton width="60%" height="1rem"></p-skeleton>
-  </div>
-  <div *ngIf="!editMode && !isLoading">
+  <div *ngIf="!editMode">
     <p-tabView>
       <p-tabPanel header="Informations générales">
         <div class="p-grid course-general-info">
