ajout des nom du groupe dans l'affichage de l'edt

--- a/src/app/resp/components/manage-courses/manage-courses.component.html
+++ b/src/app/resp/components/manage-courses/manage-courses.component.html
@@ -129,7 +129,10 @@
   <span class="custom-event-title__classroom">{{
     event.meta.classroomName
   }}</span>
+  <span class="custom-event-title__groupname">{{ event.meta.groupName }}</span>
+  <!-- Ajout du groupName -->
 </ng-template>
+
 <app-course-details-modal
   *ngIf="selectedCourse"
   [selectedCourse]="selectedCourse"
