--- a/src/app/resp/components/manage-courses/manage-courses.component.scss
+++ b/src/app/resp/components/manage-courses/manage-courses.component.scss
@@ -124,3 +124,9 @@
   padding: 2px;
   text-align: left;
 }
+
+.custom-event-title__groupname {
+  order: 4; /* Ajouté */
+  padding: 2px;
+  text-align: right;
+}
