--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -4,14 +4,13 @@
     style="width: 280px; z-index: 1000 !important">
     <div class="fixed flex flex-column h-full" style="width: 280px">
       <div class="flex align-items-center px-5 flex-shrink-0 gap-3 pt-1 cursor-pointer" routerLink="/dashboard">
-        <!-- <div>
+        <div>
           <img src="assets/images/logo-iut-shorted.png" style="width: 41px; height: 41px" />
         </div>
         <div class="flex-column">
           <h1 class="text-base">ENT</h1>
           <p class="-mt-2 text-sm">IUT de Montreuil</p>
-        </div> -->
-        <img src="assets/images/ent.png" width="90" class="mt-2 mb-2">
+        </div>
       </div>
       <div class="sidebar overflow-y-hidden mr-1 ml-1">
         <ul class="list-none pl-3 pr-3 pb-3 m-0">
@@ -162,62 +161,6 @@
           </li>
         </ul>
 
-        <!-- Menu applications pour tous -->
-        <ng-container>
-          <ul class="list-none p-3 m-0">
-            <li>
-              <div pRipple class="p-3 flex align-items-center justify-content-between text-600 cursor-pointer"
-                pStyleClass="@next" enterClass="hidden" enterActiveClass="slidedown" leaveToClass="hidden"
-                leaveActiveClass="slideup">
-                <span class="font-bold text-800 text-xs">APPLICATIONS</span>
-                <i class="pi pi-chevron-down" style="font-size: 0.8rem"></i>
-              </div>
-
-              <ul class="list-none p-0 m-0 overflow-hidden">
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-briefcase mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Moodle</span>
-                  </a>
-                </li>
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-video mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Visioconférence</span>
-                  </a>
-                </li>
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-cloud mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Mes fichiers</span>
-                  </a>
-                </li>
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-folder mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">FileZ</span>
-                  </a>
-                </li>
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-book mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Tutoriels</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </ng-container>
 
         <!-- Menu responsable EDT -->
         <ng-container *ngIf="isAdmin || role === 'teacher-resp'">
