--- a/src/app/resp/components/tp/tp.component.html
+++ b/src/app/resp/components/tp/tp.component.html
@@ -78,50 +78,58 @@
 
 <!-- Ajout du Modal (Dialogue) -->
 <p-dialog header="Ajouter des étudiants" [(visible)]="isAddStudentsDialogVisible" [modal]="true" [responsive]="true"
-    [style]="{ width: '50vw', height: '70vh' }">
+    [style]="{ width: '50vw', height: '70vh' }" [maximizable]="true">
     <ng-template pTemplate="content">
         <div class="flex gap-4">
             <div style="height: auto; margin-top: -12px">
                 <nav class="menuStudentGroup">
                     <ul>
-                        <li class="flex gap-2"><i class="pi pi-users"></i> Étudiants de la promotion</li>
-                        <li class="flex gap-2"><i class="pi pi-users"></i> Tous les étudiants</li>
+                        <li class="flex gap-2 active" [class.active]="selectedMenu === 'promo'"
+                            (click)="selectMenu('promo')"><i class="pi pi-users"></i> Étudiants en BUT {{
+                            TPInfo.promotion.level }} {{
+                            TPInfo.degree.name }} {{ TPInfo.promotion.year }}</li>
+                        <li class="flex gap-2" [class.active]="selectedMenu === 'all'" (click)="selectMenu('all')"><i
+                                class="pi pi-users"></i> Tous les étudiants</li>
                     </ul>
                 </nav>
             </div>
-            <div>
-                <p-tabView>
-                    <p-tabPanel header="Header I">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                            officia deserunt mollit anim id est laborum.
-                        </p>
-                    </p-tabPanel>
-                    <p-tabPanel header="Header II">
-                        <p>
-                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto beatae vitae dicta sunt explicabo. Nemo enim
-                            ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                            magni dolores eos qui ratione voluptatem sequi nesciunt. Consectetur, adipisci velit, sed
-                            quia non numquam eius modi.
-                        </p>
-                    </p-tabPanel>
-                    <p-tabPanel header="Header III">
-                        <p>
-                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                            voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
-                            cupiditate non provident, similique sunt in culpa
-                            qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
-                            facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-                            cumque nihil impedit quo minus.
-                        </p>
-                    </p-tabPanel>
-                </p-tabView>
+            <div class="w-full">
+                <div class="promoStudents" *ngIf="selectedMenu === 'promo'">
+                    <input type="text" pInputText name="search-query" class="search-query" class="w-full mb-2"
+                        placeholder="Rechercher un étudiant...">
+
+                    <p-table [value]="promoStudents" [(selection)]="selectedPromoStudents" dataKey="code">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th style="width: 4rem">
+                                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                                </th>
+                                <th>Nom</th>
+                                <th>Prénom</th>
+                                <th>Apprenti</th>
+                                <th>TD</th>
+                                <th>TP</th>
+                            </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-student>
+                            <tr>
+                                <td>
+                                    <p-tableCheckbox [value]="student"></p-tableCheckbox>
+                                </td>
+                                <td>{{student.code}}</td>
+                                <td>{{student.name}}</td>
+                                <td>{{student.category}}</td>
+                                <td>{{student.quantity}}</td>
+                                <td>{{student.quantity}}</td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                </div>
+
+                <div class="allStudents" *ngIf="selectedMenu === 'all'">
+                    <input type="text" pInputText name="search-query" class="search-query" class="w-full"
+                        placeholder="Rechercher un étudiant...">
+                </div>
             </div>
         </div>
     </ng-template>
