--- a/src/app/resp/components/tp/tp.component.html
+++ b/src/app/resp/components/tp/tp.component.html
@@ -78,7 +78,7 @@
 
 <!-- Ajout du Modal (Dialogue) -->
 <p-dialog header="Ajouter des étudiants" [(visible)]="isAddStudentsDialogVisible" [modal]="true" [responsive]="true"
-    [style]="{ width: '50vw', height: '70vh' }" [maximizable]="true">
+    [style]="{ width: '60vw', height: '70vh' }" [maximizable]="true">
     <ng-template pTemplate="content">
         <div class="flex gap-4">
             <div style="height: auto; margin-top: -12px">
@@ -98,7 +98,12 @@
                     <input type="text" pInputText name="search-query" class="search-query" class="w-full mb-2"
                         placeholder="Rechercher un étudiant...">
 
-                    <p-table [value]="promoStudents" [(selection)]="selectedPromoStudents" dataKey="code">
+                    <p-table [value]="promoStudents" selectionMode="multiple" [(selection)]="selectedStudents"
+                        [metaKeySelection]="metaKeySelection" dataKey="code" [paginator]="true" [rows]="5"
+                        paginatorDropdownAppendTo="body" [showCurrentPageReport]="true"
+                        [tableStyle]="{ 'min-width': '50rem' }"
+                        currentPageReportTemplate="Affichage des entrées {first} à {last} sur {totalRecords} étudiants"
+                        [rowsPerPageOptions]="[5, 10, 20]">
                         <ng-template pTemplate="header">
                             <tr>
                                 <th style="width: 4rem">
@@ -116,11 +121,15 @@
                                 <td>
                                     <p-tableCheckbox [value]="student"></p-tableCheckbox>
                                 </td>
-                                <td>{{student.code}}</td>
-                                <td>{{student.name}}</td>
-                                <td>{{student.category}}</td>
-                                <td>{{student.quantity}}</td>
-                                <td>{{student.quantity}}</td>
+                                <td>{{student.last_name}}</td>
+                                <td>{{student.first_name}}</td>
+                                <td>{{student.apprentice}}</td>
+                                <td>
+                                    <div *ngIf="student.td_name; else notSet">{{student.td_name}}</div>
+                                </td>
+                                <td>
+                                    <div *ngIf="student.tp_name; else notSet">{{student.tp_name}}</div>
+                                </td>
                             </tr>
                         </ng-template>
                     </p-table>
@@ -140,5 +149,7 @@
         <p-button type="button" label="Ajouter" class="p-button-primary" (click)="addStudents()"></p-button>
     </ng-template>
 </p-dialog>
+
+<ng-template #notSet><span class="font-italic">Aucun</span></ng-template>
 
 <p-toast></p-toast>
