--- a/src/app/resp/components/degree/degree.component.html
+++ b/src/app/resp/components/degree/degree.component.html
@@ -51,6 +51,11 @@
             </td>
           </tr>
         </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="7">Aucune promotion.</td>
+          </tr>
+        </ng-template>
       </p-table>
     </p-tabPanel>
     <p-tabPanel>
@@ -121,6 +126,11 @@
               <p-button (click)="menuStudents.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
                 severity="secondary"></p-button>
             </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="7">Aucun étudiant.</td>
           </tr>
         </ng-template>
       </p-table>
