--- a/src/app/resp/components/promotion/promotion.component.html
+++ b/src/app/resp/components/promotion/promotion.component.html
@@ -69,6 +69,11 @@
             </td>
           </tr>
         </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="7">Aucun parcours.</td>
+          </tr>
+        </ng-template>
       </p-table>
     </p-tabPanel>
     <p-tabPanel>
@@ -118,6 +123,11 @@
             <td>
               <p-button icon="pi pi-ellipsis-v" [rounded]="true" [text]="true" severity="secondary"></p-button>
             </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="7">Aucun étudiant.</td>
           </tr>
         </ng-template>
       </p-table>
