--- a/src/app/resp/components/td/td.component.html
+++ b/src/app/resp/components/td/td.component.html
@@ -66,6 +66,11 @@
                         </td>
                     </tr>
                 </ng-template>
+                <ng-template pTemplate="emptymessage">
+                    <tr>
+                        <td colspan="7">Aucun TP.</td>
+                    </tr>
+                </ng-template>
             </p-table>
         </p-tabPanel>
         <p-tabPanel>
@@ -116,6 +121,11 @@
                             <p-button icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
                                 severity="secondary"></p-button>
                         </td>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="emptymessage">
+                    <tr>
+                        <td colspan="7">Aucun étudiant.</td>
                     </tr>
                 </ng-template>
             </p-table>
