--- a/src/app/resp/components/training/training.component.html
+++ b/src/app/resp/components/training/training.component.html
@@ -70,6 +70,11 @@
                         </td>
                     </tr>
                 </ng-template>
+                <ng-template pTemplate="emptymessage">
+                    <tr>
+                        <td colspan="7">Aucun TD.</td>
+                    </tr>
+                </ng-template>
             </p-table>
         </p-tabPanel>
         <p-tabPanel>
@@ -120,6 +125,11 @@
                             <p-button icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
                                 severity="secondary"></p-button>
                         </td>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="emptymessage">
+                    <tr>
+                        <td colspan="7">Aucun étudiant.</td>
                     </tr>
                 </ng-template>
             </p-table>
