--- a/src/app/resp/components/tp/tp.component.html
+++ b/src/app/resp/components/tp/tp.component.html
@@ -86,7 +86,7 @@
     [style]="{ width: '60vw', height: '70vh' }" [maximizable]="true">
     <ng-template pTemplate="content">
         <div class="flex gap-4">
-            <div style="height: auto; margin-top: -12px">
+            <div style="height: auto; margin-top: -16px">
                 <nav class="menuStudentGroup">
                     <ul>
                         <li class="flex gap-2 active" [class.active]="selectedMenu === 'promo'"
@@ -99,7 +99,7 @@
                 </nav>
             </div>
             <div class="w-full">
-                <div class="promoStudents" *ngIf="selectedMenu === 'promo'">
+                <div class="studentsList">
                     <input type="text" pInputText [(ngModel)]="searchQuery" (ngModelChange)="filterStudents()"
                         name="search-query" class="search-query w-full mb-2" placeholder="Rechercher un étudiant...">
 
@@ -123,6 +123,7 @@
                                 <th>Nom</th>
                                 <th>Prénom</th>
                                 <th>Apprenti</th>
+                                <th>Promotion</th>
                                 <th>TD</th>
                                 <th>TP</th>
                             </tr>
@@ -139,6 +140,8 @@
                           'pi-check-circle text-green-300': student.apprentice,
                           'pi-times-circle text-red-300': !student.apprentice
                         }"></i>
+                                </td>
+                                <td>BUT {{student.promotion_level}} {{student.degree_name}} {{student.promotion_year}}
                                 </td>
                                 <td>
                                     <div *ngIf="student.td_name; else notSet">{{student.td_name}}</div>
@@ -160,6 +163,7 @@
     </ng-template>
 
     <ng-template pTemplate="footer">
+
         <p-button type="button" label="Annuler" [outlined]="true" severity="secondary" class="p-button-secondary"
             (click)="isAddStudentsDialogVisible = false"></p-button>
         <p-button type="button" label="Ajouter" class="p-button-primary" (click)="addStudents()"
